Fixes vertical spacing between tags in blog post detail (DT-1353)

--- a/css/widgets-blog.less
+++ b/css/widgets-blog.less
@@ -306,6 +306,8 @@
 				}
 				ol.blog-post-tags-list {
 					.blog-post-tag {
+						display: inline-block;
+						margin: 0 0.2em 0.2em 0;
 						a {
 							display: inline-block;
 							padding: 0em 0.7em;
